Created Product Module

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-content>
-        <div class="fx-row-space-between">
+        <div class="fx-row-space-between" routerLink="/products">
             <div class="fx-row-start-gap-20">
                 <button mat-mini-fab color="primary">
                     <mat-icon>ballot</mat-icon>
