Added comments where needed.

--- a/src/app/modules/product/components/product-filter/product-filter.component.scss
+++ b/src/app/modules/product/components/product-filter/product-filter.component.scss
@@ -1,6 +1,8 @@
+// Change the width of mat-form-field in this component
 .mat-mdc-form-field {
     // body margin = 8px, mat-card border = 2px, mat-card padding = 16px, column-gap = 20px
     // 92px = 2 * body margin + 2 * mat-card border + 2 * mat-card padding + 2 * column-gap
+    // Width for single mat-form-field should be 100vw - at least 92px divided by 3 (3 is number of mat-form-field elements)
     width: calc((100vw - 92px)/3);
 
     @media screen and (max-width: 500px) {
