--- a/src/app/modules/product/components/product-form/product-form.component.html
+++ b/src/app/modules/product/components/product-form/product-form.component.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="fx-row-space-around">
-                <button mat-raised-button color="primary" type="submit">
+                <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid">
                     {{ product ? 'Update' : 'Create' }}
                 </button>
                 <button mat-raised-button type="button" (click)="onCancel()">Cancel</button>
