--- a/src/scss/themes/indigo-pink-theme.scss
+++ b/src/scss/themes/indigo-pink-theme.scss
@@ -1,4 +1,5 @@
 @use '@angular/material' as mat;
+@import "~@angular/cdk/overlay-prebuilt.css";
 
 $my-primary: mat.define-palette(mat.$indigo-palette, 500);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
