--- a/src/app/modules/product/components/product-list/product-list.component.html
+++ b/src/app/modules/product/components/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<app-filter [fields]="productFilter" (valueChange)="onFiltered($event)">
+<app-filter [fields]="productFilterFields" (valueChange)="onFiltered($event)">
 </app-filter>
 
 <mat-card>
