Use formBuilder service instead of creating new FormGroup object

--- a/src/app/modules/reusable-components/components/filter/filter.component.html
+++ b/src/app/modules/reusable-components/components/filter/filter.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-content>
-    <form [formGroup]="filterForm" autocomplete="none" novalidate>
+    <form [formGroup]="form" autocomplete="none" novalidate>
       <div class="fx-row-space-between">
         <h3>Filter</h3>
         <button class="float-right" mat-mini-fab color="primary" type="reset">
