Created reusable components item and list. Removed product component

--- a/src/scss/warehouse.scss
+++ b/src/scss/warehouse.scss
@@ -23,7 +23,7 @@
     margin-bottom: 8px;
 }
 
-.mat-card-product {
+.mat-card-item {
     margin: 5px 0;
     border: 0.4px solid $accent !important;
     border-radius: 10px !important;
