--- a/src/app/modules/product/components/product-list/product-list.component.html
+++ b/src/app/modules/product/components/product-list/product-list.component.html
@@ -1,18 +1,5 @@
-<app-filter [fields]="productFilterFields" (valueChange)="onFiltered($event)">
-</app-filter>
+<!-- PRODUCT FILTER -->
+<app-filter [fields]="productFilterFields" (valueChange)="onFiltered($event)"></app-filter>
 
-<mat-card>
-    <mat-card-content>
-        <ng-container *ngIf="products$ | async as products">
-            <div class="fx-row-space-between">
-                <h3>Total: {{products.length}} product{{products.length > 1 ? 's' : ''}}</h3>
-                <button class="float-right" mat-mini-fab color="primary" routerLink="create">
-                    <mat-icon>add</mat-icon>
-                </button>
-            </div>
-            <ng-container *ngFor="let product of products">
-                <app-product [product]="product"></app-product>
-            </ng-container>
-        </ng-container>
-    </mat-card-content>
-</mat-card>
+<!-- PRODUCT LIST -->
+<app-list [items]="products$ | async" [createLink]="'/products/create'" [editLink]="'/products/edit'"></app-list>
