--- a/src/app/modules/product/components/product-form/product-form.component.html
+++ b/src/app/modules/product/components/product-form/product-form.component.html
@@ -44,7 +44,7 @@
                 <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid">
                     {{ product ? 'Update' : 'Create' }}
                 </button>
-                <button mat-raised-button type="button" routerLink="/products">Cancel</button>
+                <button mat-raised-button type="button" [disableRipple]="true" routerLink="/products">Cancel</button>
             </div>
             
         </form>
